# kick-python-client

./: .env.example  .gitignore  LICENSE.txt  MANIFEST.in  README.md  bot.py  pyproject.toml  requirements-dev.txt  requirements.txt
src/kick/: __init__.py  auth.py  channel.py  chat.py  client.py  exceptions.py  user.py
tests/: test_basic.py
