# pyproject.toml

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kick-api-client"
dynamic = ["version"]                 
description = "Simple Python client for Kick.com public API (OAuth2 + user tokens)"
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}          
authors = [
    {name = "mardssss"} 
]
keywords = ["kick", "kick.com", "streaming", "api", "oauth"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "requests >= 2.28.0",
    "flask >= 2.2.0",           # for local OAuth callback server
]

[project.optional-dependencies]
dev = [
    "ruff >= 0.5.0",
    "pytest >= 8.0",
    "pytest-cov >= 5.0",
    "pre-commit >= 3.7",
    "python-dotenv >= 1.0.0",
]

[project.urls]
Homepage = "https://github.com/mardssss/kick-api-client"
Repository = "https://github.com/mardssss/kick-api-client"
Issues = "https://github.com/mardssss/kick-api-client/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/kick"]

[tool.hatch.version]
path = "src/kick/__init__.py"